<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:fillViewport="true"
    tools:context=".activity.MainActivity"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_arrow"
            style="@style/imageButton"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/choose_city"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/toWikiBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toWikiBtn"
            tools:text="Saint-Petersburg" />

        <ImageButton
            android:id="@+id/toWikiBtn"
            style="@style/imageButton"
            android:contentDescription="@string/change_city_button"
            android:src="@drawable/wiki_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/todayDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toWikiBtn"
            tools:text="31 дек. 1999 Ср. 23.49" />

        <TextView
            android:id="@+id/temperatureWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/temperature"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/middle_line"
            app:layout_constraintTop_toBottomOf="@id/todayDate" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/primary_color"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@id/degreeWordUp"
            app:layout_constraintTop_toBottomOf="@id/temperatureWord"
            tools:text="-5" />

        <TextView
            android:id="@+id/degreeWordUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/temperatureValue"
            app:layout_constraintEnd_toEndOf="@id/temperatureWord" />


        <View
            android:id="@+id/middle_line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@id/overcastValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/temperatureWord" />

        <TextView
            android:id="@+id/humidityWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/humidity"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/middle_line"
            app:layout_constraintTop_toTopOf="@id/temperatureWord" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?attr/primary_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/humidityWord"
            tools:text="99%" />

        <TextView
            android:id="@+id/overcastWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overcast"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/humidityValue" />

        <TextView
            android:id="@+id/overcastValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?attr/primary_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/overcastWord"
            app:layout_constraintTop_toBottomOf="@id/overcastWord"
            tools:text="Частичная облачность" />

        <TextView
            android:id="@+id/weatherLastWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/weather_last_week"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overcastValue" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewTempHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherLastWeek" />

        <ImageView
            android:id="@+id/weatherImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toStartOf="@+id/temperatureWord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/temperatureWord"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/weatherPhoto"
            android:layout_width="370dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleViewTempHistory"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>